--- a/README.Rmd
+++ b/README.Rmd
@@ -47,4 +47,4 @@ devtools::install_github("wranglezone/tibblify")
 
 ## Code of Conduct
 
-Please note that the tibblify project is released with a [Contributor Code of Conduct](https://www.contributor-covenant.org/version/2/0/code_of_conduct/). By contributing to this project, you agree to abide by its terms.
+Please note that the tibblify project is released with a [Contributor Code of Conduct](https://tibblify.wrangle.zone/CODE_OF_CONDUCT.html). By contributing to this project, you agree to abide by its terms.
