--- a/vignettes/supported-structures.Rmd
+++ b/vignettes/supported-structures.Rmd
@@ -1,8 +1,8 @@
 ---
-title: "Overview supported structures"
+title: "Overview of supported structures"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Overview supported structures}
+  %\VignetteIndexEntry{Overview of supported structures}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
@@ -18,18 +18,14 @@ knitr::opts_chunk$set(
 library(tibblify)
 ```
 
-## Supported input for `tibblify()`
-
-The idea of `tibblify()` is to make it easier and more robust to convert lists
-of lists into tibbles. This is a typical task after receiving API responses in
-JSON format.
-The following provides an overview which kind of R objects are supported and
-the JSON they correspond to.
+The idea of `tibblify()` is to make it easier and more robust to convert lists of lists into tibbles. 
+This is a typical task after receiving API responses in JSON format.
+The following provides an overview of which kinds of R objects are supported and the JSON to which they correspond.
 
 
-### Scalars
+## Scalars
 
-There are 4 basic types of scalars coming from JSON: boolean, integer, float, string.
+There are 4 basic types of scalars in JSON: boolean, integer, float, string.
 In R there are not really scalars but only vectors of length 1.
 
 :::: {style="display: grid; grid-template-columns: 1fr 1fr; grid-column-gap: 10px; width: 100%;"}
@@ -65,8 +61,8 @@ Other R vectors without JSON equivalent are also supported as long as they:
 
 Examples are `Date` or `POSIXct`.
 
-In general a scalar can be parsed with `tib_scalar()`. There are some special
-functions for common types:
+In general a scalar can be parsed with `tib_scalar()`. 
+There are some special functions for common types:
 
 * `tib_lgl()`
 * `tib_int()`
@@ -76,11 +72,10 @@ functions for common types:
 * `tib_chr_date()` to parse dates encoded as string.
 
 
-### Vectors
+## Vectors
 
-A homogeneous JSON array is an array of scalar where each scalar has the same type.
-In R they correspond to a `logical()`, `integer()`, `double()` or `character()`
-vector:
+A homogeneous JSON array is an array of scalars where each scalar has the same type.
+In R they correspond to a `logical()`, `integer()`, `double()` or `character()` vector.
 
 :::: {style="display: grid; grid-template-columns: 1fr 1fr; grid-column-gap: 10px; width: 100%;"}
 
@@ -108,18 +103,17 @@ c("a", NA, "c")
 
 ::::
 
-As for scalars other types are also supported as long as they are a vector in the
-vctrs definition.
+As with scalars, other vector types are also supported as long as they are a vector in the vctrs definition.
 
-They can be parsed with `tib_vector()`. As for scalars there are shortcuts for
-some common types, e.g. `tib_lgl_vec()`.
+They can be parsed with `tib_vector()`. 
+As with scalars, there are shortcuts for some common types, e.g. `tib_lgl_vec()`.
 
-#### Empty lists
+### Empty lists
 
-A special case are empty lists `list()`. They might appear when parsing an empty
-JSON array:
+Empty lists `list()` are a special case. 
+They might appear when parsing an empty JSON array.
 
-```{r error=TRUE}
+```{r}
 x_json <- '[
   {"a": [1, 2]},
   {"a": []}
@@ -129,25 +123,23 @@ x <- jsonlite::fromJSON(x_json, simplifyDataFrame = FALSE)
 str(x)
 ```
 
-By default they are not supported but produce an error:
+By default they are not supported but produce an error.
 
 ```{r error=TRUE}
 tibblify(x, tspec_df(tib_int_vec("a")))
 ```
 
-Use `vector_allows_empty_list = TRUE` in `tspec_*()` so that they are converted
-to an empty vector instead:
+Use `vector_allows_empty_list = TRUE` in `tspec_*()` so that they are converted to an empty vector instead.
 
 ```{r}
 tibblify(x, tspec_df(tib_int_vec("a"), vector_allows_empty_list = TRUE))$a
 ```
 
-#### Homogeneous R lists of scalars
+### Homogeneous R lists of scalars
 
-When using `jsonlite::fromJSON(simplifyVector = FALSE)` to parse JSON to an R
-object one does not get R vectors but homogeneous lists of scalars:
+When using `jsonlite::fromJSON(simplifyVector = FALSE)` to parse JSON to an R object one does not get R vectors but homogeneous lists of scalars.
 
-```{r error=TRUE}
+```{r}
 x_json <- '[
   {"a": [1, 2]},
   {"a": [1, 2, 3]}
@@ -157,7 +149,7 @@ x <- jsonlite::fromJSON(x_json, simplifyVector = FALSE)
 str(x)
 ```
 
-By default they cannot be parsed with `tib_vector()`
+By default they cannot be parsed with `tib_vector()`.
 
 ```{r error=TRUE}
 tibblify(x, tspec_df(tib_int_vec("a")))
@@ -170,9 +162,9 @@ tibblify(x, tspec_df(tib_int_vec("a", input_form = "scalar_list")))$a
 ```
 
 
-### Homogeneous JSON objects of scalars
+## Homogeneous JSON objects of scalars
 
-Sometimes vectors are encoded as objects in JSON:
+Sometimes vectors are encoded as objects in JSON.
 
 ```{r}
 x_json <- '[
@@ -184,7 +176,8 @@ x <- jsonlite::fromJSON(x_json, simplifyVector = FALSE)
 str(x)
 ```
 
-Use `input_form = "object"` in `tib_vector()` to parse them. To actually store the names use the `names_to` and `values_to` argument:
+Use `input_form = "object"` in `tib_vector()` to parse them. 
+To store the names use the `names_to` and `values_to` arguments.
 
 ```{r}
 spec <- tspec_df(
@@ -196,12 +189,13 @@ spec <- tspec_df(
   )
 )
 
-tibblify(x, spec)$a
+tibblify(x, spec)$a[[1]]
+tibblify(x, spec)$a[[2]]
 ```
 
-### Varying
+## Varying
 
-Lists where elements do not have a common type but vary. For example:
+JSON also has lists where elements do not have a common type, but instead vary. For example:
 
 :::: {style="display: grid; grid-template-columns: 1fr 1fr; grid-column-gap: 10px; width: 100%;"}
 
@@ -223,13 +217,12 @@ list(1, "a", TRUE)
 
 ::::
 
-can be parsed with `tib_variant()`.
+Such lists can be parsed with `tib_variant()`.
 
 
-### Object
+## Object
 
-The R equivalent to a JSON object is a named list where the names fulfill the
-requirements of `vctrs::vec_as_names(repair = "check_unique")`.
+The R equivalent to a JSON object is a named list where the names fulfill the requirements of `vctrs::vec_as_names(repair = "check_unique")`.
 
 :::: {style="display: grid; grid-template-columns: 1fr 1fr; grid-column-gap: 10px; width: 100%;"}
 
@@ -258,7 +251,7 @@ x <- list(
 
 ::::
 
-They can be parsed with `tib_row()`. For example
+They can be parsed with `tib_row()`. For example:
 
 ```{r}
 x <- list(
@@ -278,9 +271,9 @@ tibblify(x, spec)
 ```
 
 
-### Data Frames
+## Data Frames
 
-List of objects
+JSON can also store lists of objects.
 
 :::: {style="display: grid; grid-template-columns: 1fr 1fr; grid-column-gap: 10px; width: 100%;"}
 
@@ -310,10 +303,10 @@ x <- list(
 
 They can be parsed with `tib_df()`.
 
-#### Object of objects
+### Object of objects
 
-A special form are named lists of object. In JSON they are represented as objects
-where each element is an object.
+JSON can also store named lists of objects. 
+In JSON they are represented as objects where each element is an object.
 
 :::: {style="display: grid; grid-template-columns: 1fr 1fr; grid-column-gap: 10px; width: 100%;"}
 
@@ -341,7 +334,7 @@ x <- list(
 
 ::::
 
-They are also parsed with `tib_df()` but you can parse the names into an extra
+They are also parsed with `tib_df()`, but you can parse the names into an extra
 column via the `.names_to` argument:
 
 ```{r}
@@ -367,9 +360,9 @@ spec <- tspec_df(
 tibblify(x, spec)$df
 ```
 
-#### Column major format
+### Column-major format
 
-The column major format is also supported
+The column-major format is also supported.
 
 :::: {style="display: grid; grid-template-columns: 1fr 1fr; grid-column-gap: 10px; width: 100%;"}
 
@@ -397,7 +390,7 @@ x <- list(
 
 ::::
 
-via `.input_form = "colmajor"` in `tspec_*()`:
+Parse this using `.input_form = "colmajor"` in `tspec_*()`.
 
 ```{r}
 df_spec <- tspec_df(
@@ -409,3 +402,4 @@ df_spec <- tspec_df(
 tibblify(x, df_spec)
 ```
 
+This is roughly equivalent to `tibble::as_tibble(x)`.
